--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -1,5 +1,5 @@
 .splash {
-  height: 100%;
+  height: calc(100% - 100px);
   position: relative;
 }
 
